addressed review comments

--- a/boston_housing.ipynb
+++ b/boston_housing.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -104,25 +104,25 @@
       "Maximum price: $1,024,800.00\n",
       "Mean price: $454,342.94\n",
       "Median price $438,900.00\n",
-      "Standard deviation of prices: $165,340.28\n"
+      "Standard deviation of prices: $165,171.13\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "minimum_price = data[\"MEDV\"].min()\n",
+    "minimum_price = np.min(data[\"MEDV\"]) #data[\"MEDV\"].min()\n",
     "\n",
     "# TODO: Maximum price of the data\n",
-    "maximum_price = data[\"MEDV\"].max()\n",
+    "maximum_price = np.max(data[\"MEDV\"]) #data[\"MEDV\"].max()\n",
     "\n",
     "# TODO: Mean price of the data\n",
-    "mean_price = data[\"MEDV\"].mean()\n",
+    "mean_price = np.mean(data[\"MEDV\"]) #data[\"MEDV\"].mean()\n",
     "\n",
     "# TODO: Median price of the data\n",
-    "median_price = data[\"MEDV\"].median()\n",
+    "median_price = np.median(data[\"MEDV\"]) # data[\"MEDV\"].median()\n",
     "\n",
     "# TODO: Standard deviation of prices of the data\n",
-    "std_price = data[\"MEDV\"].std()\n",
+    "std_price = np.std(data[\"MEDV\"]) #data[\"MEDV\"].std()\n",
     "\n",
     "# Show the calculated statistics\n",
     "print \"Statistics for Boston housing dataset:\\n\"\n",
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -526,13 +526,13 @@
     "    regressor = DecisionTreeRegressor()\n",
     "\n",
     "    # Create a dictionary for the parameter 'max_depth' with a range from 1 to 10\n",
-    "    params = {'max_depth':range(1,10)}\n",
+    "    params = {'max_depth':range(1,11)}\n",
     "\n",
-    "    # TODO: Transform 'performance_metric' into a scoring function using 'make_scorer' \n",
+    "    # Transform 'performance_metric' into a scoring function using 'make_scorer' \n",
     "    scoring_fnc = make_scorer(performance_metric)\n",
     "\n",
-    "    # TODO: Create the grid search object\n",
-    "    grid = GridSearchCV(regressor,params)\n",
+    "    # Create the grid search object\n",
+    "    grid = GridSearchCV(regressor,params,scoring=scoring_fnc,cv=cv_sets)\n",
     "\n",
     "    # Fit the grid search object to the data to compute the optimal model\n",
     "    grid = grid.fit(X, y)\n",
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -645,7 +645,10 @@
     "\n",
     "Suggested selling price for Client 2's home: $189,123.53\n",
     "\n",
-    "Suggested selling price for Client 3's home: $942,666.67"
+    "Suggested selling price for Client 3's home: $942,666.67\n",
+    "\n",
+    "Thes prices seem reasonable with the assumptions we made earlier in the Data Exploration portion of the project.\n",
+    "the house with the most rooms, the least amount of poverty, and the lowest student to teacher ratio was by far the highest predicted selling price. The house with the lowest number of rooms, the most poverty, and the highest student to teacher ratio was by far the lowest predicted selling price. "
    ]
   },
   {
@@ -658,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -668,18 +671,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trial 1: $411,000.00\n",
-      "Trial 2: $411,417.39\n",
+      "Trial 1: $391,183.33\n",
+      "Trial 2: $424,935.00\n",
       "Trial 3: $415,800.00\n",
-      "Trial 4: $428,316.00\n",
-      "Trial 5: $413,334.78\n",
-      "Trial 6: $422,223.53\n",
+      "Trial 4: $420,622.22\n",
+      "Trial 5: $418,377.27\n",
+      "Trial 6: $411,931.58\n",
       "Trial 7: $399,663.16\n",
       "Trial 8: $407,232.00\n",
-      "Trial 9: $402,531.82\n",
+      "Trial 9: $351,577.61\n",
       "Trial 10: $413,700.00\n",
       "\n",
-      "Range in prices: $28,652.84\n"
+      "Range in prices: $73,357.39\n"
      ]
     }
    ],
@@ -707,7 +710,7 @@
     "**Answer: ** \n",
     "\n",
     "\n",
-    "I don't think the constructed model should be used in a real-world setting as it stands now. The data we used is very stale. Even if the data we had fully described the housing market in 1978 it still would have questionable application to the market now. which segues into the other major problem with our constructed model. The features we have certainly have predictive power but we are leaving out some pretty important variables such as the square footage, price per square footage of surrounding  houses, garage space and yard size to name a few. Not taking into account these variables could lead to the sensitivy problem we have in this model. Depending on the training and testing split we see a range in prices up to $28,000. This would be unacceptable in real world use. So now if you had built a model that addressed the above issues but you still only used data from Boston, it would only be really useful for houses in Boston. Median home prices range drastically across the United States even with similar features. This has a lot to do with location demand and can't be addressed with only sampling in one housing market. "
+    "I don't think the constructed model should be used in a real-world setting as it stands now. The data we used is very stale. Even if the data we had fully described the housing market in 1978 it still would have questionable application to the market now. which segues into the other major problem with our constructed model. The features we have certainly have predictive power but we are leaving out some pretty important variables such as the square footage, price per square footage of surrounding  houses, garage space and yard size to name a few. Not taking into account these variables could lead to the sensitivy problem we have in this model. Depending on the training and testing split we see a range in prices up to $70,000. This would be unacceptable in real world use. So now if you had built a model that addressed the above issues but you still only used data from Boston, it would only be really useful for houses in Boston. Median home prices range drastically across the United States even with similar features. This has a lot to do with location demand and can't be addressed with only sampling in one housing market. "
    ]
   },
   {
